# md-to-plain-text

./: All_MD_features.txt  README.md  app.py  pyproject.toml  requirements.txt
md_to_plain_text/: example_cases.py  extensions.py  html_to_plain_text.py
